--- a/index.html
+++ b/index.html
@@ -15,28 +15,28 @@
             <form action="#">
                 <div class="txt_error">Error de mensaje</div>
                 <div class="name-surname">
-                    <div class="field">
+                    <div class="field input">
                         <label for="">Nombre:</label>
                         <input type="text" placeholder="Escribe tu nombre">
                     </div>
-                    <div class="field">
+                    <div class="field input">
                         <label for="">Apellido:</label>
                         <input type="text" placeholder="Escribe tu apellido">
                     </div>
                 </div>
-                <div class="field">
-                    <label for="">Correo Electrónico:</label>
-                    <input type="email" placeholder="Digita tu Correo">
+                <div class="field input">
+                    <label for="">Email:</label>
+                    <input type="email" placeholder="Digita tu correo electrónico">
                 </div>
-                <div class="field">
+                <div class="field input">
                     <label for="">Contraseña:</label>
                     <input type="text" placeholder="Digita una contraseña">
                 </div>
-                <div class="field">
-                    <label for="">Selecciona una imágen:</label>
+                <div class="field image">
+                    <label for="">Selecciona una imagen:</label>
                     <input type="file">
                 </div>
-                <div class="field">
+                <div class="field submit">
                     <input type="submit" value="¡A chatear!">
                 </div>
             </form>
